--- a/Group Project/style.css
+++ b/Group Project/style.css
@@ -1,56 +1,43 @@
-*{
-  
-    padding:0;
+* {
+    padding: 0;
     box-sizing: border-box;
     text-align: center;
     margin: 7px;
-    border-color: blueviolet;
-   
+    border-color: rgb(0, 0, 0);
 }
-
-.Main{
+.Main {
     color: white;
-    width: 60%;
+    width: 100%;
     margin: auto;
- background-color: rgb(41, 3, 75);
- height: 40em;
- padding: 0px
- 
+    background-color: rgb(117, 90, 37);
+    height: 40em;
+    padding: 0px
 }
-.b1{
+.b1 {
     text-align: center;
     border-radius: 50px;
     margin: 8px;
-    background-color: rgb(237, 225, 221);
- 
-
+    background-color: rgb(107, 136, 135);
 }
-.b2{
+.b2 {
     text-align: center;
     border-radius: 50px;
-    background-color: rgba(209, 230, 216, 0.94);
+    background-color: rgba(112, 144, 144, 0.94);
     margin: 8px;
-  
 }
-h6{
-    color: gray;
-
+h6 {
+    color: rgb(0, 0, 0);
 }
-#toprow{
-    color: darkgrey;
+#toprow {
+    color: rgb(0, 0, 0);
     font-size: 12px;
     margin: 0em;
     justify-content: flex-end;
-    
-    
 }
-h1{
-  
+h1 {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    text-decoration: underline;
 }
-img{
-    
-    width: 200px;
-}
-p{color: gray;
-}
+
+p {
+    color: rgb(3, 3, 3);
